<resources>
    <string name="app_name">MyIntent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="gallery">Gallery</string>
    <string name="dial">Call a number</string>
    <string name="calllog">Open Call Logs</string>
    <string name="browser">Open Browser</string>
    <string name="map">Open Map</string>
    <string name="action_exit">Exit</string>
</resources>
