<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_contacts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts" />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery" />

    <Button
        android:id="@+id/button_Dail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial" />

    <Button
        android:id="@+id/button_calllog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calllog" />

    <Button
        android:id="@+id/button_browser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/browser" />


    <Button
        android:id="@+id/button_map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/map" />

</LinearLayout>
